<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Edit Dashboard, should appear as action button if possible -->
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_create_black_48dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>

    <!-- New Widget, should appear as action button if possible -->
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_fiber_new_black_48dp"
        android:title="@string/action_new"
        app:showAsAction="ifRoom"/>

    <!-- Refresh, should always be in the overflow -->
    <item
        android:id="@+id/action_controller"
        android:icon="@drawable/ic_settings_remote_black_48dp"
        android:title="@string/action_controller"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_48dp"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!-- Logout, should always be in the overflow -->
    <item android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_48dp"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>