<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Refresh, should appear as action button if possible -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_black_48dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_48dp"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!-- Logout, should always be in the overflow -->
    <item android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_48dp"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>